Grid in large view

--- a/main.scss
+++ b/main.scss
@@ -6,92 +6,105 @@
 h1 {
     font-family: $font-lato;
 }
-h2{
+
+h2 {
     font-family: $font-lora;
 }
-h3{
+
+h3 {
     font-family: $font-roboto;
     font-weight: bold;
 }
-p{
+
+p {
     font-family: $font-slab;
 }
 
 
 
-h1,h2,h3,div.summary,div#zen-benefits,footer{
+h1,
+h2,
+h3,
+div.summary,
+div#zen-benefits,
+footer {
     text-align: center;
 }
 
-div#zen-supporting,div#zen-requirements{
-display :grid;
-grid-template-columns: auto auto;
-grid-template-rows: auto auto auto;
-column-gap: 10%;
-margin:5%;
-}
-
-div#zen-benefits{
-grid-column: span 2;
-}
-h3{grid-column: span 2;}
-div#zen-requirements,footer{
-    grid-column: span 2;
-    
-}
-div#zen-requirements.requirements :nth-child(6){
-    grid-column: span 2;
-}
-
-// div#zen-requirements.requirements > p {
-//     grid-column: span 2;
-// }
-
 body {
-    font-family: $font-lora;  // font family
+    font-family: $font-lora; // font family
     color: $rich-black; // text color
     background-color: $alice-blue;
     margin: auto;
     // max-width: 50vw;
-    
+
 }
 
-section#zen-intro{
-    margin: 5%;
+section#zen-intro {
+    margin: 5% 0 0 0;
     text-align: justify;
 }
 
 
-div#zen-supporting.main.supporting{
+div#zen-supporting.main.supporting {
     justify-content: center;
 }
 
-div.page-wrapper{
-        max-width: 70vw;
-            margin: auto;}
+div.page-wrapper {
+    max-width: 70vw;
+    margin: auto;
+}
 
-div#zen-requirements{
+div#zen-requirements {
     margin: 0%;
 }
 
 
-nav{
+nav {
     margin: -4vh;
     margin-top: 2%;
     margin-bottom: 2%;
 }
 
-aside.sidebar{
-    margin:5%
+aside.sidebar {
+    margin: 5%
 }
 
 //670px to change the animation
 $breakpoint-tablet: 670px;
 
 @media (min-width: $breakpoint-tablet) {
-body:nth-child(n){
-    padding:1%;
-    // background-color: aqua;
-    border-left: 25vw solid black;
-    border-right: 25vw solid black;
-}}
+    body:nth-child(n) {
+        padding: 1%;
+        // background-color: aqua;
+        border-left: 20vw solid black;
+        border-right: 20vw solid black;
+    }
+
+    div#zen-supporting,
+    div#zen-requirements {
+        display: grid;
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto;
+        column-gap: 10%;
+        margin: 5%;
+    }
+
+    div#zen-benefits {
+        grid-column: span 2;
+    }
+
+    h3 {
+        grid-column: span 2;
+    }
+
+    div#zen-requirements,
+    footer {
+        grid-column: span 2;
+
+    }
+
+    div#zen-requirements.requirements :nth-child(6) {
+        grid-column: span 2;
+    }
+}
