--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ div.summary,
 div#zen-benefits,
 footer {
   text-align: center;
+  margin: 0;
 }
 
 body {
@@ -63,18 +64,14 @@ body {
   margin: auto;
 }
 
-section#zen-intro {
-  margin: 5% 0 0 0;
+div.page-wrapper {
   text-align: justify;
+  margin: 0 auto;
+  padding: 1.8rem;
 }
 
 div#zen-supporting.main.supporting {
   justify-content: center;
-}
-
-div.page-wrapper {
-  max-width: 70vw;
-  margin: auto;
 }
 
 div#zen-requirements {
@@ -92,10 +89,13 @@ aside.sidebar {
 }
 
 @media (min-width: 670px) {
-  body:nth-child(n) {
-    padding: 1%;
-    border-left: 20vw solid black;
-    border-right: 20vw solid black;
+  body {
+    background: #676767;
+    margin: 0;
+  }
+  div.page-wrapper {
+    background: rgb(232, 241, 242);
+    max-width: 1400px;
   }
   div#zen-supporting,
   div#zen-requirements {
