--- a/main.scss
+++ b/main.scss
@@ -76,7 +76,7 @@ $breakpoint-tablet: 550px;
     }
     div.page-wrapper {
         background: $alice-blue;
-        max-width: 1200px;
+        max-width: 65vw;
     }
 
     div#zen-supporting,
