--- a/main.scss
+++ b/main.scss
@@ -6,38 +6,45 @@
 h1 {
     font-family: $font-lato;
 }
-
 h2 {
     font-family: $font-lora;
 }
-
 h3 {
     font-family: $font-roboto;
     font-weight: bold;
 }
-
 p {
     font-family: $font-slab;
 }
 
-
-
 h1,
 h2,
-h3,
+// h3,
 div.summary,
-div#zen-benefits,
+//div#zen-benefits,
 footer {
     text-align: center;
     margin: 0;
 }
 
 body {
+    //width:auto;
     font-family: $font-lora; // font family
     color: $rich-black; // text color
     background-color: $alice-blue;
-    margin: auto;
+    margin: 0%;
+    padding: 5%;
     // max-width: 50vw;
+}
+
+h1{
+font-size: 10vw;
+}
+h2 {
+    font-size: 5vw;
+}
+div#zen-summary.summary{
+    padding: 5%;
 }
 
 div.page-wrapper {
@@ -50,11 +57,9 @@ div#zen-supporting.main.supporting {
     justify-content: center;
 }
 
-
 div#zen-requirements {
     margin: 0%;
 }
-
 
 nav {
     margin: -4vh;
@@ -62,47 +67,127 @@ nav {
     margin-bottom: 2%;
 }
 
-aside.sidebar {
-    margin: 5%
+
+
+div#zen-summary.summary>p:nth-child(2){
+    font-size: 60%;
+}
+div#zen-summary.summary>p:nth-child(1) {
+    // text-align: left;
+    word-wrap: normal;
+}
+//Color code for both road and so what
+div#zen-preamble.preamble,div#zen-explanation.explanation{
+    background-color: $celadon;
+    padding:5%;
 }
 
-//670px to change the animation
-$breakpoint-tablet: 550px;
-
-@media (min-width: $breakpoint-tablet) {
-    body {
-        background: #000;
-        margin: 0;
-    }
-    div.page-wrapper {
-        background: $alice-blue;
-        max-width: 1200px;
-    }
-
-    div#zen-supporting,
-    div#zen-requirements {
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-template-rows: auto auto auto;
-        column-gap: 10%;
-        margin: 5%;
-    }
-
-    div#zen-benefits {
-        grid-column: span 2;
-    }
-
-    h3 {
-        grid-column: span 2;
-    }
-
-    div#zen-requirements,
-    footer {
-        grid-column: span 2;
-
-    }
-
-    div#zen-requirements.requirements :nth-child(6) {
-        grid-column: span 2;
-    }
+//The Road to Enligtenment
+div#zen-preamble.preamble{
+    border-bottom: 1px dashed black;
+    border-top-right-radius: 3%;
+    border-top-left-radius: 3%;
 }
+//So What is This About ?
+div#zen-explanation.explanation {
+    border-bottom-right-radius: 3%;
+    border-bottom-left-radius: 3%;
+}
+
+// Color code for both participation and benefits
+div#zen-participation.participation,
+div#zen-benefits.benefits {
+    background-color: $mint-green;
+    padding: 5%;
+    text-align: left;
+}
+
+//Participation
+div#zen-participation.participation {
+    padding-top: 0%;
+    margin-top: 3%;
+    border-bottom: 1px dashed black;
+    border-top-right-radius: 3%;
+    border-top-left-radius: 3%;
+}
+
+//Benefits
+div#zen-benefits.benefits {
+    border-bottom-right-radius: 3%;
+    border-bottom-left-radius: 3%;
+}
+
+div#zen-requirements.requirements {
+    background-color: $russian-green;
+    padding:5%;
+    margin-top: 3%;
+    border-radius: 15px;
+}
+
+
+//footer
+// h3.select,h3.resources{
+//     margin-left: 20%;
+// }
+// h3.archives{
+//     margin-left: 10%;
+// }
+aside.sidebar{
+    //width: 80%;
+    margin: 0%;
+    text-align: left;
+    word-wrap: normal;
+    overflow:hidden ;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+ul{
+    list-style-type: none;
+}
+li{
+    text-decoration: underline;
+    margin-bottom: 5%;
+}
+
+
+//550px to change the animation //Uncomment this Garen when you work large view.
+// $breakpoint-tablet: 550px;
+
+// @media (min-width: $breakpoint-tablet) {
+//     body {
+//         background: #000;
+//         margin: 0;
+//     }
+//     div.page-wrapper {
+//         background: $alice-blue;
+//         max-width: 1200px;
+//     }
+
+//     div#zen-supporting,
+//     div#zen-requirements {
+//         display: grid;
+//         grid-template-columns: auto auto;
+//         grid-template-rows: auto auto auto;
+//         column-gap: 10%;
+//         margin: 5%;
+//     }
+
+//     div#zen-benefits {
+//         grid-column: span 2;
+//     }
+
+//     h3 {
+//         grid-column: span 2;
+//     }
+
+//     div#zen-requirements,
+//     footer {
+//         grid-column: span 2;
+
+//     }
+
+//     div#zen-requirements.requirements :nth-child(6) {
+//         grid-column: span 2;
+//     }
+// }
