--- a/style.css
+++ b/style.css
@@ -49,9 +49,7 @@ p {
 
 h1,
 h2,
-h3,
 div.summary,
-div#zen-benefits,
 footer {
   text-align: center;
   margin: 0;
@@ -61,7 +59,20 @@ body {
   font-family: "Lora", serif;
   color: rgb(0, 26, 35);
   background-color: rgb(232, 241, 242);
-  margin: auto;
+  margin: 0%;
+  padding: 5%;
+}
+
+h1 {
+  font-size: 10vw;
+}
+
+h2 {
+  font-size: 5vw;
+}
+
+div#zen-summary.summary {
+  padding: 5%;
 }
 
 div.page-wrapper {
@@ -84,40 +95,73 @@ nav {
   margin-bottom: 2%;
 }
 
-aside.sidebar {
-  margin: 5%;
+div#zen-summary.summary > p:nth-child(2) {
+  font-size: 60%;
 }
 
-@media (min-width: 550px) {
-  body {
-    background: #000;
-    margin: 0;
-  }
-  div.page-wrapper {
-    background: rgb(232, 241, 242);
-    max-width: 1200px;
-  }
-  div#zen-supporting,
-  div#zen-requirements {
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto;
-    column-gap: 10%;
-    margin: 5%;
-  }
-  div#zen-benefits {
-    grid-column: span 2;
-  }
-  h3 {
-    grid-column: span 2;
-  }
-  div#zen-requirements,
-  footer {
-    grid-column: span 2;
-  }
-  div#zen-requirements.requirements :nth-child(6) {
-    grid-column: span 2;
-  }
+div#zen-summary.summary > p:nth-child(1) {
+  word-wrap: normal;
+}
+
+div#zen-preamble.preamble, div#zen-explanation.explanation {
+  background-color: rgb(166, 211, 160);
+  padding: 5%;
+}
+
+div#zen-preamble.preamble {
+  border-bottom: 1px dashed black;
+  border-top-right-radius: 3%;
+  border-top-left-radius: 3%;
+}
+
+div#zen-explanation.explanation {
+  border-bottom-right-radius: 3%;
+  border-bottom-left-radius: 3%;
+}
+
+div#zen-participation.participation,
+div#zen-benefits.benefits {
+  background-color: rgb(179, 255, 179);
+  padding: 5%;
+  text-align: left;
+}
+
+div#zen-participation.participation {
+  padding-top: 0%;
+  margin-top: 3%;
+  border-bottom: 1px dashed black;
+  border-top-right-radius: 3%;
+  border-top-left-radius: 3%;
+}
+
+div#zen-benefits.benefits {
+  border-bottom-right-radius: 3%;
+  border-bottom-left-radius: 3%;
+}
+
+div#zen-requirements.requirements {
+  background-color: rgb(122, 158, 126);
+  padding: 5%;
+  margin-top: 3%;
+  border-radius: 15px;
+}
+
+aside.sidebar {
+  margin: 0%;
+  text-align: left;
+  word-wrap: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+ul {
+  list-style-type: none;
+}
+
+li {
+  text-decoration: underline;
+  margin-bottom: 5%;
 }
 
 /*# sourceMappingURL=style.css.map */
