Finished Small View

--- a/main.scss
+++ b/main.scss
@@ -4,190 +4,167 @@
 @use "heading";
 
 h1 {
-    font-family: $font-lato;
+  font-family: $font-lato;
 }
-h2 {
-    font-family: $font-lora;
+h2,body {
+  font-family: $font-lora;
 }
 h3 {
-    font-family: $font-roboto;
-    font-weight: bold;
+  font-family: $font-roboto;
+  font-weight: bold;
 }
 p {
-    font-family: $font-slab;
+  font-family: $font-slab;
 }
 
-h1,
-h2,
-// h3,
-div.summary,
-//div#zen-benefits,
-footer {
-    text-align: center;
-    margin: 0;
+h3.select,
+h3.archives ,
+div#zen-resources.zen-resources,
+div#design-selection.design-selection ,
+li.next,
+li.viewall,
+footer ,div.summary,h1,
+h2 {
+  text-align: center;
+}
+
+//add image
+
+body{
+  background-image: url('https://tinyurl.com/mxntn7rp');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 1vw;
 }
 
 body {
-    //width:auto;
-    font-family: $font-lora; // font family
-    color: $rich-black; // text color
-    background-color: $alice-blue;
-    margin: 0%;
-    padding: 5%;
-    // max-width: 50vw;
+  color: $rich-black; // text color
+  background-color: $alice-blue;
+  padding: 10vw;
 }
 
-h1{
-font-size: 10vw;
+h1 {
+  font-size: 10vw;
 }
 h2 {
-    font-size: 5vw;
+  font-size: 5vw;
 }
-div#zen-summary.summary{
-    padding: 5%;
+div#zen-summary.summary {
+  padding: 5%;
 }
 
 div.page-wrapper {
-    text-align: justify;
-    margin: 0 auto;
-    padding: 1.8rem;
+  text-align: justify;
 }
-
 div#zen-supporting.main.supporting {
-    justify-content: center;
+  justify-content: center;
 }
-
-div#zen-requirements {
-    margin: 0%;
+div#zen-requirements,
+div.page-wrapper ,
+aside.sidebar,
+footer ,div.summary,
+h1,h2 {
+  margin: 0%;
 }
-
 nav {
-    margin: -4vh;
-    margin-top: 2%;
-    margin-bottom: 2%;
+  margin: -4vh;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
-
-
-
-div#zen-summary.summary>p:nth-child(2){
-    font-size: 60%;
+div#zen-summary.summary > p:nth-child(2) {
+  font-size: 60%;
 }
-div#zen-summary.summary>p:nth-child(1) {
-    // text-align: left;
-    word-wrap: normal;
+div#zen-summary.summary > p:nth-child(1) {
+  // text-align: left;
+  word-wrap: normal;
 }
 //Color code for both road and so what
-div#zen-preamble.preamble,div#zen-explanation.explanation{
-    background-color: $celadon;
-    padding:5%;
-}
-
-//The Road to Enligtenment
-div#zen-preamble.preamble{
-    border-bottom: 1px dashed black;
-    border-top-right-radius: 3%;
-    border-top-left-radius: 3%;
-}
-//So What is This About ?
+div#zen-preamble.preamble,
 div#zen-explanation.explanation {
-    border-bottom-right-radius: 3%;
-    border-bottom-left-radius: 3%;
+  background-color: $celadon;
+  padding: 5%;
 }
-
+//The Road to Enligtenment
+div#zen-preamble.preamble {
+  border-bottom: 1px dashed black;
+}
 // Color code for both participation and benefits
 div#zen-participation.participation,
 div#zen-benefits.benefits {
-    background-color: $mint-green;
-    padding: 5%;
-    text-align: left;
+  background-color: $mint-green;
+  padding: 5%;
+  text-align: left;
 }
-
 //Participation
 div#zen-participation.participation {
-    padding-top: 0%;
-    margin-top: 3%;
-    border-bottom: 1px dashed black;
-    border-top-right-radius: 3%;
-    border-top-left-radius: 3%;
+  padding-top: 1%;
+  margin-top: 3%;
+  border-bottom: 1px dashed black;
 }
-
+div#zen-participation.participation,
+div#zen-requirements.requirements,
+div#zen-preamble.preamble {
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
 //Benefits
-div#zen-benefits.benefits {
-    border-bottom-right-radius: 3%;
-    border-bottom-left-radius: 3%;
+div#zen-benefits.benefits,div#zen-explanation.explanation {
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
-
+//Requirements
 div#zen-requirements.requirements {
-    background-color: $russian-green;
-    padding:5%;
-    margin-top: 3%;
-    border-radius: 15px;
+  background-color: $russian-green;
+  border-bottom: 2%;
+  padding-bottom: 3%;
+  padding: 5%;
+  margin-top: 3%;
+  //border-radius: 15px;
 }
-
-
 //footer
-// h3.select,h3.resources{
-//     margin-left: 20%;
-// }
-// h3.archives{
-//     margin-left: 10%;
-// }
-aside.sidebar{
-    //width: 80%;
-    margin: 0%;
-    text-align: left;
-    word-wrap: normal;
-    overflow:hidden ;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  padding: 10%;
+  background: $granny-smith-apple;
 }
-
-ul{
-    list-style-type: none;
+footer > a {
+  text-decoration: none;
 }
-li{
-    text-decoration: underline;
-    margin-bottom: 5%;
+ul {
+  list-style-type: none;
 }
-
-
-//550px to change the animation //Uncomment this Garen when you work large view.
-// $breakpoint-tablet: 550px;
-
-// @media (min-width: $breakpoint-tablet) {
-//     body {
-//         background: #000;
-//         margin: 0;
-//     }
-//     div.page-wrapper {
-//         background: $alice-blue;
-//         max-width: 1200px;
-//     }
-
-//     div#zen-supporting,
-//     div#zen-requirements {
-//         display: grid;
-//         grid-template-columns: auto auto;
-//         grid-template-rows: auto auto auto;
-//         column-gap: 10%;
-//         margin: 5%;
-//     }
-
-//     div#zen-benefits {
-//         grid-column: span 2;
-//     }
-
-//     h3 {
-//         grid-column: span 2;
-//     }
-
-//     div#zen-requirements,
-//     footer {
-//         grid-column: span 2;
-
-//     }
-
-//     div#zen-requirements.requirements :nth-child(6) {
-//         grid-column: span 2;
-//     }
-// }
+li {
+  text-decoration: underline;
+  margin-bottom: 5%;
+  width: 85%;
+}
+div#design-selection.design-selection {
+  width: 70%;
+}
+div#design-archives.design-archives, 
+div#zen-resources.zen-resources ,
+div#design-selection.design-selection{
+  margin: auto;
+}
+div#zen-resources.zen-resources > ul {
+  width: auto;
+}
+li.next,
+li.viewall {
+  width: 90%;
+}
+// Code for Gradients in the footer
+div#design-selection.design-selection > nav > ul > li:nth-child(even) {
+  background-color: aqua; //color aqua testing purposes only
+}
+div#design-selection.design-selection > nav > ul > li:nth-child(odd) {
+  background-color: $granite-gray;
+}
+a::before{
+   content: "\a";
+   white-space: pre;
+}
