--- a/_colors.scss
+++ b/_colors.scss
@@ -8,3 +8,10 @@ $kombu-green: rgba(49, 73, 60, 1);
 $battleship-grey: rgba(128, 135, 130, 1);
 $granite-gray: rgba(101, 101, 101, 1);
 $rich-black: rgba(0, 26, 35, 1);
+
+$header-bg: rgb(41, 81, 37);
+$subheader: rgb(168, 210, 164);
+$link: rgb(23, 55, 20);
+$block-bg: rgb(108, 181, 99);
+$author-bg: rgb(63, 120, 55);
+$sidebar-bg: rgb(167, 211, 160);
