--- a/_colors.scss
+++ b/_colors.scss
@@ -15,3 +15,4 @@ $link: rgb(23, 55, 20);
 $block-bg: rgb(108, 181, 99);
 $author-bg: rgb(63, 120, 55);
 $sidebar-bg: rgb(167, 211, 160);
+$require-link: rgb(215, 249, 212);
