--- a/_fonts.scss
+++ b/_fonts.scss
@@ -1,7 +1,43 @@
 //Google Fonts
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Lora&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap');
 
+@import url("https://fonts.googleapis.com/css2?family=Recursive:slnt,wght,CASL,CRSV,MONO@-15..0,300..800,0..1,0..1,0..1&display=swap");
+
+:root{
+     --ratio: 1.5;
+  --s-5: calc(var(--s-4) / var(--ratio));
+  --s-4: calc(var(--s-3) / var(--ratio));
+  --s-3: calc(var(--s-2) / var(--ratio));
+  --s-2: calc(var(--s-1) / var(--ratio));
+  --s-1: calc(var(--s0) / var(--ratio));
+  --s0: 1rem;
+  --s1: calc(var(--s0) * var(--ratio));
+  --s2: calc(var(--s1) * var(--ratio));
+  --s3: calc(var(--s2) * var(--ratio));
+  --s4: calc(var(--s3) * var(--ratio));
+  --s5: calc(var(--s4) * var(--ratio));
+  /* set variation axis values */
+  --border-alert-color: lightgray;
+  /*set border color for alert*/
+  --mono: "MONO" 0;
+  /* Monospace: Sans (natural-width) or Mono (fixed-width) */
+  --casl: "CASL" 0;
+  /* Casual: Linear to Casual */
+  --wght: 00;
+  /* Weight: Light to ExtraBlack; usually set with `font-weight` */
+  --slnt: 0deg;
+  /* Slant: 0 to -15 degrees, auto cursive at -14 */
+  --crsv: "CRSV" 0.5;
+  /* Cursive: always roman (0), auto substitution (.5), or always cursive (1) */
+}
+* {
+  font-weight: var(--wght);
+  font-style: oblique var(--slnt);
+  font-variation-settings: var(--mono), var(--casl), var(--crsv);
+}
+
 $font-lato: 'Lato',sans-serif;
 $font-lora: 'Lora',serif;
-$font-roboto: 'Roboto',sans-serif;
+// $font-roboto: 'Roboto',sans-serif;
+$font-roboto: 'Recursive', monospace;
 $font-slab: 'Roboto Slab',serif;
