Added gradient and svg on aside

--- a/_colors.scss
+++ b/_colors.scss
@@ -12,7 +12,11 @@ $rich-black: rgba(0, 26, 35, 1);
 $header-bg: rgb(41, 81, 37);
 $subheader: rgb(168, 210, 164);
 $link: rgb(23, 55, 20);
-$block-bg: rgb(108, 181, 99);
+
+$block-bg1: rgb(156, 219, 149);
+$block-bg2: rgb(111, 230, 96);
+$block-bg3: rgb(38, 205, 16);
+
 $author-bg: rgb(63, 120, 55);
 $sidebar-bg: rgb(167, 211, 160);
 $require-link: rgb(215, 249, 212);
