Added more text shadow to aside

--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ aside.sidebar div.wrapper li {
   font-weight: 600;
 }
 aside.sidebar div.wrapper h3, aside.sidebar div.wrapper li {
-  text-shadow: -1px -1px 0 #acf9a6, 1px -1px 0 #acf9a6, -1px 1px 0 #acf9a6, 1px 1px 0 #acf9a6;
+  text-shadow: -1px -1px 0 #acf9a6, 1px -1px 0 #acf9a6, -1px 1px 0 #acf9a6, 1px 1px 0 #acf9a6, 0 0 15px black, 0 0 15px black;
 }
 aside.sidebar div.wrapper a {
   color: rgb(5, 57, 2);
