--- a/style.scss
+++ b/style.scss
@@ -267,7 +267,7 @@ aside.sidebar {
 
     h3, li {
 
-      text-shadow: -1px -1px 0 #acf9a6, 1px -1px 0 #acf9a6, -1px 1px 0 #acf9a6, 1px 1px 0 #acf9a6;
+      text-shadow: -1px -1px 0 #acf9a6, 1px -1px 0 #acf9a6, -1px 1px 0 #acf9a6, 1px 1px 0 #acf9a6, 0 0 15px black, 0 0 15px black;
     }
 
     a {
