--- a/_fonts.scss
+++ b/_fonts.scss
@@ -1,6 +1,6 @@
 //Google Fonts
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Lora&family=Roboto+Slab:wght@300&family=Roboto:wght@300&display=swap');
-
+// Roboto Slab, Lora, Recursive Fonts are variable fonts
 @import url("https://fonts.googleapis.com/css2?family=Recursive:slnt,wght,CASL,CRSV,MONO@-15..0,300..800,0..1,0..1,0..1&display=swap");
 
 :root{
@@ -23,7 +23,7 @@
   /* Monospace: Sans (natural-width) or Mono (fixed-width) */
   --casl: "CASL" 0;
   /* Casual: Linear to Casual */
-  --wght: 00;
+  --wght: 100;
   /* Weight: Light to ExtraBlack; usually set with `font-weight` */
   --slnt: 0deg;
   /* Slant: 0 to -15 degrees, auto cursive at -14 */
