--- a/style.scss
+++ b/style.scss
@@ -89,6 +89,8 @@ section.intro#zen-intro {
   div.summary#zen-summary {
     text-align: center;
     margin: 1rem 0;
+      padding-left: 5vw;
+  padding-right: 5vw;
 
     a {
       color: rgb(5, 57, 2);
@@ -138,6 +140,7 @@ div.explanation#zen-explanation,
 div.benefits#zen-benefits {
   margin: 0 .6rem 1rem;
   border-radius: 0 0 1.5rem 1.5rem;
+
 
   @include screen-size(large) {
     margin: 0 2rem 1rem;
