Removed text shadow

--- a/style.css
+++ b/style.css
@@ -298,11 +298,11 @@ aside.sidebar div.wrapper li {
   font-weight: 600;
 }
 aside.sidebar div.wrapper h3, aside.sidebar div.wrapper li {
-  text-shadow: -1px -1px 0 #acf9a6, 1px -1px 0 #acf9a6, -1px 1px 0 #acf9a6, 0 0 15px black, 0 0 15px black;
+  text-shadow: -1px -1px 0 #acf9a6, 1px -1px 0 #acf9a6, -1px 1px 0 #acf9a6;
 }
 aside.sidebar div.wrapper a {
-  color: rgb(5, 57, 2);
-  text-shadow: -1px -1px 0 #6fee66, 1px -1px 0 #6fee66, -1px 1px 0 #6fee66, 0 0 15px black, 0 0 15px black;
+  color: rgb(0, 0, 0);
+  text-shadow: -1px -1px 0 #6fee66, 1px -1px 0 #6fee66, -1px 1px 0 #6fee66;
 }
 aside.sidebar div.wrapper a:last-child {
   color: rgb(0, 26, 35);
@@ -311,7 +311,7 @@ aside.sidebar div.wrapper a:hover {
   display: inline-block;
   transition: 0.3s ease-in-out;
   text-decoration: underline;
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
 
 /*# sourceMappingURL=style.css.map */
