--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,8 @@
 
 $breakpoint-large: 500px;
 
+
+
 @mixin screen-size($size) {
   @if ($size ==large) {
     @media (min-width: $breakpoint-large) {
@@ -52,8 +54,9 @@ body {
   // background-image: url('https://tinyurl.com/mxntn7rp');
   background-image: $body-svg-image;
 	
+  @include screen-size(large){
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;}
 }
 
 div.page-wrapper {
